--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 <IfModule mod_rewrite.c>
     RewriteEngine on
-    RewriteRule    ^$    wwww/    [L]
+    RewriteRule    ^$    www/    [L]
     RewriteRule    (.*) www/$1    [L]
  </IfModule>
