--- a/config/routes.yml
+++ b/config/routes.yml
@@ -1,3 +1,8 @@
+_home:
+    path:   ''
+    controller:   'HelloController'
+    action: 'helloHome'
+
 _hello:
     method: 'get'
     path:   '/hello/:id'
