--- a/config/routes.yml
+++ b/config/routes.yml
@@ -1,20 +1,32 @@
-_home:
-    path:   ''
-    controller:   'HelloController'
-    action: 'helloHome'
+# $this->map(
+#     '/users/:id/edit/',
+#     'users:edit',
+#     array('methods' => 'GET', 'name' => 'users_edit', 'filters' => array('id' => '(\d+)'))
+# );
+# $this->map(
+#     '/contact/',
+#     array('controller' => 'someController', 'action' => 'contactAction'),
+#     array('name' => 'contact')
+# );
 
 _hello:
     method: 'get'
-    path:   '/hello/:id'
+    path:   'hello/:id'
     controller:   'HelloController'
     action: 'doHelloWorld'
-    params:
+    filters:
         require:
             id: '\d+'
         default:
             id: 1
 
+_home:
+    path:   ''
+    controller:   'HelloController'
+    action: 'helloHome'
+
+
 _helloNew:
-    path:   '/helloNew'
+    path:   'helloNew'
     controller:   'HelloController'
     action: 'doHelloWorldNew'
