--- a/config/routes.yml
+++ b/config/routes.yml
@@ -6,12 +6,13 @@
 
 _hello:
     method: 'get'
-    path:   'hello/:id'
+    path:   'hello/:id/:test'
     controller:   'HelloController'
     action: 'doHelloWorld'
     filters:
         require:
             id: '\d+'
+            test: '\w+'
         default:
             id: 1
 
