--- a/config/routes.yml
+++ b/config/routes.yml
@@ -1,18 +1,22 @@
 # $this->map(
+#     '/users/:id/edit/',
+#     'users:edit',
+#     array('methods' => 'GET', 'name' => 'users_edit', 'filters' => array('id' => '(\d+)'))
+# );
+# $this->map(
 #     '/contact/',
 #     array('controller' => 'someController', 'action' => 'contactAction'),
-#     array('methods' => 'GET', 'name' => 'users_edit', 'filters' => array('id' => '(\d+)'))
+#     array('name' => 'contact')
 # );
 
 _hello:
     method: 'get'
-    path:   'hello/:id/:test'
+    path:   'hello/:id'
     controller:   'HelloController'
     action: 'doHelloWorld'
     filters:
         require:
             id: '\d+'
-            test: '\w+'
         default:
             id: 1
 
