--- a/config/routes.yml
+++ b/config/routes.yml
@@ -1,22 +1,18 @@
 # $this->map(
-#     '/users/:id/edit/',
-#     'users:edit',
-#     array('methods' => 'GET', 'name' => 'users_edit', 'filters' => array('id' => '(\d+)'))
-# );
-# $this->map(
 #     '/contact/',
 #     array('controller' => 'someController', 'action' => 'contactAction'),
-#     array('name' => 'contact')
+#     array('methods' => 'GET', 'name' => 'users_edit', 'filters' => array('id' => '(\d+)'))
 # );
 
 _hello:
     method: 'get'
-    path:   'hello/:id'
+    path:   'hello/:id/:test'
     controller:   'HelloController'
     action: 'doHelloWorld'
     filters:
         require:
             id: '\d+'
+            test: '\w+'
         default:
             id: 1
 
