Skeleton: alias test

--- a/config/skeleton.yml
+++ b/config/skeleton.yml
@@ -11,6 +11,7 @@
 _skeleton_main:
     header:
         template: 'header/main'
+        alias: 'testAlias'
     nav:
         template: 'nav/main'
     body:
