Front: add enw template to skeleton

--- a/config/skeleton.yml
+++ b/config/skeleton.yml
@@ -13,6 +13,8 @@ _skeleton_main:
         template: 'header/main'
     nav:
         template: 'nav/main'
+    user:
+        template: 'user/bar'
     body:
         template: 'actu/home'
     footer:
