Test: create a new route to test Walrus.js

--- a/config/routes.yml
+++ b/config/routes.yml
@@ -8,3 +8,8 @@ _home:
     path:   ''
     controller:   'HomeController'
     action: 'run'
+
+_me:
+    path: 'me'
+    controller: 'UserController'
+    action: 'run'
