--- a/config/routes.yml
+++ b/config/routes.yml
@@ -14,3 +14,16 @@ _config:
     path: 'config'
     controller: 'ConfigController'
     action: 'config'
+
+_test:
+    path: 'test/:param1/:param2/:param3/(:param4)'
+    controller: 'HomeController'
+    action: 'testRoute'
+    method: 'GET'
+    filters:
+        require:
+            param1: '\d+'
+            param2: '[A-Z]'
+        default:
+            param3: 1
+            param4: 'coucou'
