--- a/config/routes.yml
+++ b/config/routes.yml
@@ -2,28 +2,10 @@
 
 _home:
     path:   ''
-    controller:   'HomeController'
+    controller:   'HelloController'
     action: 'run'
-
-_sidebar_home:
-    path: 'sidebar/home'
-    controller: 'SidebarController'
-    action: 'home'
 
 _config:
     path: 'config'
     controller: 'ConfigController'
     action: 'config'
-
-_test:
-    path: 'test/:param1/:param2/(:param3)/(:param4)'
-    controller: 'HomeController'
-    action: 'testRoute'
-    method: 'GET'
-    filters:
-        require:
-            param1: '\d+'
-            param2: '[A-Z]+'
-        default:
-            param3: 'test'
-            param4: 'coucou'
