--- a/Walrus/core/sample/APIController.sample
+++ b/Walrus/core/sample/APIController.sample
@@ -2,9 +2,9 @@
 
 namespace engine\controllers;
 
-use Walrus\core\WalrusFrontController as WalrusFrontController;
+use Walrus\core\WalrusAPI;
 
-class %name%Controller extends WalrusFrontController
+class %name%Controller extends WalrusAPI
 {
 
 }
