--- a/Walrus/core/sample/config.sample
+++ b/Walrus/core/sample/config.sample
@@ -21,5 +21,5 @@ $_ENV['W']['base_url'] = "%url%";
 // Templating language: haml|smarty|php
 $_ENV['W']['templating'] = "%templating%";
 
-// Environment: dev|prod
+// Environment: development|production
 $_ENV['W']['environment'] = "%environment%";
