Walrus: deploy: deploy 100%

--- a/config/routes/route-default.yml
+++ b/config/routes/route-default.yml
@@ -7,6 +7,6 @@ _home:
     method: 'GET'
 
 _config:
-    path: 'config2'
+    path: 'config'
     controller: 'ConfigController'
     action: 'config'
