--- a/Walrus/core/sample/config.sample
+++ b/Walrus/core/sample/config.sample
@@ -23,3 +23,6 @@ $_ENV['W']['templating'] = "%templating%";
 
 // Environment: development|production
 $_ENV['W']['environment'] = "%environment%";
+
+// I18n: default|user-value
+$_ENV['W']['language'] = "default";
