--- a/config/forms/forms-default.yml
+++ b/config/forms/forms-default.yml
@@ -44,6 +44,6 @@
 #       type: select
 #       options:
 #         - train
-#         - voiture
-#         - jambes
+#         - car
+#         - plane
 
