--- a/app/www/.htaccess
+++ b/app/www/.htaccess
@@ -4,5 +4,5 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
 
-    RewriteRule ^(.*)$ index.php/$1 [L,QSA]
+    RewriteRule ^(.*)$ index.php?walrus_route=$1 [L,QSA]
 </IfModule>
