Form builder: add textarea exemple, fix min/max verification

--- a/config/forms/forms-default.yml
+++ b/config/forms/forms-default.yml
@@ -46,4 +46,8 @@
 #         - train
 #         - car
 #         - plane
+#     message:
+#       type: textarea
+#       check:
+#         min: 50
 
