fix router on url format and add filter login

--- a/config/routes/route-default.yml
+++ b/config/routes/route-default.yml
@@ -1,12 +1,12 @@
 # Routes
 
 _home:
-    path:   ''
+    path:   '/'
     controller:   'HelloController'
     action: 'run'
     method: 'GET'
 
 _config:
-    path: 'config'
+    path: '/config'
     controller: 'ConfigController'
     action: 'config'
