--- a/config/routes/route-default.yml
+++ b/config/routes/route-default.yml
@@ -10,3 +10,8 @@ _config:
     path: '/config'
     controller: 'ConfigController'
     action: 'config'
+
+_logout:
+    path: '/logout'
+    controller: 'WalrusSigninController'
+    action: 'logout'
