--- a/config/forms/forms-default.yml
+++ b/config/forms/forms-default.yml
@@ -1,6 +1,6 @@
 # Form exemple
 
-# _form_login:
+# form_signup:
 #   form:
 #     method: POST
 #     action: /my-form
@@ -46,4 +46,8 @@
 #         - train
 #         - car
 #         - plane
+#     message:
+#       type: textarea
+#       check:
+#         min: 50
 
