--- a/config/routes/route-default.yml
+++ b/config/routes/route-default.yml
@@ -5,3 +5,8 @@ _home:
     controller:   'HelloController'
     action: 'run'
     method: 'GET'
+
+_config:
+    path: 'config'
+    controller: 'ConfigController'
+    action: 'config'
