init projects part

--- a/config/routes/route-default.yml
+++ b/config/routes/route-default.yml
@@ -6,7 +6,7 @@ _home:
     action: 'run'
     method: 'GET'
 
-_config:
-    path: 'config'
-    controller: 'ConfigController'
-    action: 'config'
+_project:
+    path: 'project'
+    controller: 'ProjectController'
+    action: 'index'
