bug fix + model update

--- a/config/forms/form-project.yml
+++ b/config/forms/form-project.yml
@@ -10,8 +10,9 @@ form_project:
     fields:
         title:
             type: text
-            min: 1
             label: Title
+            check:
+                min: 1
 
         description:
             type: textarea
