update routes + add delete

--- a/config/routes/routes-project.yml
+++ b/config/routes/routes-project.yml
@@ -9,6 +9,9 @@ _show_project:
     path: 'project/show/:id'
     controller: 'ProjectController'
     action: 'show'
+    filters:
+        require:
+            id: '\d+'
 
 _create_project:
     path: 'project/create'
@@ -19,8 +22,14 @@ _delete_project:
     path: 'project/delete/:id'
     controller: 'ProjectController'
     action: 'delete'
+    filters:
+        require:
+            id: '\d+'
 
 _update_project:
     path: 'project/update/:id'
     controller: 'ProjectController'
     action: 'update'
+    filters:
+        require:
+            id: '\d+'
