Allows core components override in app/core folder

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ config/compiled/
 
 #JetBrains IDE
 .idea/
+nbproject/private/private.properties
+nbproject/project.xml
+nbproject/project.properties
